# Ubuntu_Slam

./: .gitignore  README.txt  weekLog.txt
CV_lab1/: CMakeLists.txt
CV_lab1/app/: CMakeLists.txt  blog_test.cpp  grayscale_conversion.cpp  mono_reconstruct.cpp  undistort.cpp  xml_conversion.cpp
CV_lab1/config/: conf.yaml
CV_lab1/data/: camera.yaml  images.xml
CV_lab1/images/: intrinsics.txt
LK_flow/: CMakeLists.txt
LK_flow/app/: CMakeLists.txt  lk_stereo.cpp
LK_flow/config/: default.yaml
LK_flow/include/: camera.h  common.h  config.h  feature.h  frame.h  frontend.h  map.h  mappoint.h  viewer.h  visual_odometry.h
LK_flow/src/: CMakeLists.txt  camera.cpp  config.cpp  feature.cpp  frame.cpp  frontend.cpp  mappoing.cpp  viewer.cpp  visual_odometry.cpp
LK_flow/test/: CMakeLists.txt  TEST_config.cpp
camera_intrinsics/: CMakeLists.txt
ch13/src/: visual_odometry.cpp
dense_RGBD/: CMakeLists.txt  pointcloud_mapping.cpp
double_lens_camera/: double_lens  double_lens.cpp
mono_pose/: CMakeLists.txt  intrinsics.yml  intrinsics2.yml  mono_pose.cpp  plotTrajectory.cpp
my_ch13/config/: default.yaml
octo_map/: CMakeLists.txt
realtime_poseplot/: CMakeLists.txt  realtime_plot.cpp
realtime_poseplot/data/: intrinsics.yml
slambook2-master/ch13/: CMakeLists.txt
slambook2-master/ch13/config/: default.yaml
slambook2-master/ch13/include/myslam/: camera.h  dataset.h
slambook2-master/ch13/src/: CMakeLists.txt  dataset.cpp  frontend.cpp
stereo_calib/: CMakeLists.txt
stereo_calib/app/: CMakeLists.txt  fmt_test.cpp  imwrite_test.cpp  mono_calib.cpp  stereo_capture.cpp
stereo_calib/config/: leftImageList.xml  rightImageList.xml  stereo_calib.xml
stereo_calib/myDatasets/: calib.txt
stereo_calib/myDatasets2/: calib.txt
stereo_intrinsics/: extrinsics.yml  stereo_calib  stereo_calib.cpp  stereo_calib.xml
stereo_recover/: CMakeLists.txt
