CMAKE_MINIMUM_REQUIRED(VERSION 3.19)
PROJECT(myslam)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_STANDARD 14)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake)


# OpenCV
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

# Eigen
INCLUDE_DIRECTORIES("usr/include/eigen3")

# Pangolin
FIND_PACKAGE(Pangolin REQUIRED)
INCLUDE_DIRECTORIES(${Pangolin_INCLUDE_DIRS})

# Sophus
FIND_PACKAGE(Sophus REQUIRED)
FIND_PACKAGE(fmt    REQUIRED)
INCLUDE_DIRECTORIES(${Sophus_INCLUDE_DIRS})

# Csparse
FIND_PACKAGE(CSparse REQUIRED)
INCLUDE_DIRECTORIES(${CSPARSE_INCLUDE_DIR})

# G2O
FIND_PACKAGE(G2O REQUIRED)
INCLUDE_DIRECTORIES(${G2O_INCLUDE_DIRS})

# Google
# glog
FIND_PACKAGE(Glog REQUIRED)
INCLUDE_DIRECTORIES(${GLOG_INCLUDE_DIRS})

# gtest
FIND_PACKAGE(GTest REQUIRED)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

# gflags
FIND_PACKAGE(GFlags REQUIRED)
INCLUDE_DIRECTORIES(${GFLAGS_INCLUDE_DIRS})

SET(THIRD_PARTY_LIBS
        ${OpenCV_LIBS}
        ${Sophus_LIBRARIES} fmt
        ${Pangolin_LIBRARIES} GL GLU GLEW glut
        g2o_core g2o_stuff g2o_types_sba g2o_solver_csparse g2o_csparse_extension
        pthread
        ${GTEST_BOTH_LIBRARIES}
        ${GLOG_LIBRARIES}
        ${GFLAGS_LIBRARIES}
        ${CSPARSE_LIBRARY}
        )

# app & src & test
# notice the sequence of INCLUDE!
# notice the sequence of SUBDIRECTORY!
INCLUDE_DIRECTORIES(./include)
ADD_SUBDIRECTORY(./src)
ADD_SUBDIRECTORY(./test)
ADD_SUBDIRECTORY(./app)
