CMAKE_MINIMUM_REQUIRED(VERSION 3.19)
PROJECT(calibration)

SET(CMAKE_BUILD_TYPE "Release")
SET(CMAKE_CXX_STANDARD 14)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_EXECUTABLE(calibration calibration.cpp)
TARGET_LINK_LIBRARIES(calibration ${OpenCV_LIBS})