CMAKE_MINIMUM_REQUIRED(VERSION 3.19)
PROJECT(dense_RGBD)

SET(CMAKE_BUILD_TYPE "Release")
SET(CMAKE_CXX_STANDARD 14)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

# Dependency
FIND_PACKAGE(OpenCV  REQUIRED)
FIND_PACKAGE(PCL     REQUIRED)
FIND_PACKAGE(octomap REQUIRED)
INCLUDE_DIRECTORIES("usr/include/eigen3")
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OCTOMAP_INCLUDE_DIRS})
ADD_DEFINITIONS(${PCL_DEFINITIONS})

ADD_EXECUTABLE(pointcloud_mapping pointcloud_mapping.cpp)
TARGET_LINK_LIBRARIES(pointcloud_mapping ${OpenCV_LIBS} ${PCL_LIBRARIES})