CMAKE_MINIMUM_REQUIRED(VERSION 3.19)
PROJECT(realtime_plot)

SET(CMAKE_BUILD_TYPE "Release")
SET(CMAKE_CXX_STANDARD 14)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Pangolin REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Pangolin_INCLUDE_DIRS})
INCLUDE_DIRECTORIES("usr/include/Eigen")

ADD_EXECUTABLE(realtime_plot realtime_plot.cpp)
TARGET_LINK_LIBRARIES(realtime_plot ${OpenCV_LIBS} ${Pangolin_LIBRARIES})