CMAKE_MINIMUM_REQUIRED(VERSION 3.19)
PROJECT(stereo_recover)

SET(CMAKE_BUILD_TYPE "Release")
SET(CMAKE_CXX_STANDARD 14)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Pangolin REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_EXECUTABLE(stereo_recover stereo_recover.cpp)
ADD_EXECUTABLE(double_lens double_lens.cpp)
TARGET_LINK_LIBRARIES(double_lens ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(stereo_recover ${OpenCV_LIBS} ${Pangolin_LIBRARIES})